# aoc2022

./: Cargo.toml
src/: template.rs
src/day1/: day1.rs
src/day2/: day2.rs
src/day3/: day3.rs
src/day4/: day4.rs
src/day5/: day5.rs
